Links & Fixed header on mobile

--- a/src/components/sections/Header/style.scss
+++ b/src/components/sections/Header/style.scss
@@ -22,6 +22,7 @@
 	position: fixed;
 	top: 34px;
 	left: 0;
+	z-index: 20;
 	width: 100%;
 	pointer-events: none;
 	display: inherit;
